--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@ body
 {
     margin: 0;
     padding: 0;
-    background: url(../img/img.png)
-    background: url('img/background/bg.jpg') 0 0/contain no-repeat;
+    background: url('../img/img.png') 0 0/contain no-repeat;
 
 }
 .search-box {
