--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body
 {
     background-image: url('Gronbygg/img/img.png'); 
-    background-position: 0 0;
+    background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: contain;
 
