--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body
 {
+    margin: 0;
+    padding: 0;
     background-image: url('Gronbygg/img/img.png'); 
     background-position: 50% 50%;
     background-repeat: no-repeat;
