--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body
 {
     margin: 0;
     padding: 0;
-    background-image: url(/img/img.jpg); 
+    background-image: url(https://gronbygg.github.io/Gronbygg/img/img.jpg); 
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: contain;
