--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body
     margin: 0;
     padding: 0;
     background-image: url(https://gronbygg.github.io/Gronbygg/img/img.jpg); 
-    background-position: 50% 50%;
+    background-position: 0 0;
     background-repeat: no-repeat;
     background-size: contain;
 
