--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body
     margin: 0;
     padding: 0;
     background: url(https://gronbygg.github.io/Gronbygg/img/img.jpg) 50% 50%/cover no-repeat;
+    top: 5%;
+    left: 40%;
 }
 .search-box {
     position: absolute;
