--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body
 {
     margin: 0;
     padding: 0;
-    background: url(https://gronbygg.github.io/Gronbygg/img/img.png) 50% 40%/contain no-repeat;
+    background: url(https://gronbygg.github.io/Gronbygg/img/img.png) 50% 40%/auto no-repeat;
 }
 .search-box {
     position: absolute;
