--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body
 {
     margin: 0;
     padding: 0;
-    background: url(https://gronbygg.github.io/Gronbygg/img/img.png) 50% 50%/auto 100% no-repeat;
+    background: url(https://gronbygg.github.io/Gronbygg/img/img.png) 50% 50%/100% 100% no-repeat;
 }
 .search-box {
     position: absolute;
