--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body
 {
     margin: 0;
     padding: 0;
-    background: url(https://gronbygg.github.io/Gronbygg/img/img.png) 50% no-repeat;
+    background: url(https://gronbygg.github.io/Gronbygg/img/img.png);
+    top: 50%;
+    left: 50%;
 }
 .search-box {
     position: absolute;
