--- a/style.css
+++ b/style.css
@@ -2,10 +2,7 @@ body
 {
     margin: 0;
     padding: 0;
-    background: url(https://gronbygg.github.io/Gronbygg/img/img.png);
-    top: 50%;
-    left: 50%;
-    height: 69px;
+    background: url(https://gronbygg.github.io/Gronbygg/img/img.png) 50% no-repeat;
 }
 .search-box {
     position: absolute;
