--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body
 {
-    background: url(https://gronbygg.github.io/Gronbygg/img/img.png) 50% 30% no-repeat;
+    background: url(https://gronbygg.github.io/Gronbygg/img/img2.jpg) 50% 30% no-repeat;
+    width="100%";
 }
 .search-box {
     position: absolute;
