--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body
 {
-    background: url(https://gronbygg.github.io/Gronbygg/img/img2.jpg) 100% -20% no-repeat;
+    background: url(https://gronbygg.github.io/Gronbygg/img/img2.jpg) 50% -20% contain no-repeat;
 }
 .search-box {
     position: absolute;
