--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body
 {
     background: url(https://gronbygg.github.io/Gronbygg/img/img2.jpg) 50% -30% no-repeat;
-    background-size: contain;
+    background-size: 100% 100%;
 }
 .search-box {
     position: absolute;
