--- a/style.css
+++ b/style.css
@@ -106,4 +106,8 @@ th {
 td {
     background: #b5b5b5;
 }
+{
+    background: url(https://gronbygg.github.io/Gronbygg/img/img2.jpg) 50% -30% no-repeat;
+    background-size: 100% 100%;
+}
 </style>
