--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body
-{
+.block{
     background: url(https://gronbygg.github.io/Gronbygg/img/img2.jpg) 50% 50% no-repeat;
     background-size: 100% 100%;
 }
