--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
-body
-.block{
-    background: url(https://gronbygg.github.io/Gronbygg/img/img2.jpg) 50% 50% no-repeat;
-    background-size: 100% 100%;
+body{
+    background: url(https://gronbygg.github.io/Gronbygg/img/img2.jpg)no-repeat center center fixed;
+    background-size: contain;
 }
 .search-box {
     position: absolute;
