--- a/style.css
+++ b/style.css
@@ -72,6 +72,12 @@ body{
     list-style-type: none;
     width: 100px;
 }
+.navbar {
+    margin-right: 25px;
+}
+.navbar a {
+    font-size: 16px
+}
 .navbar a {
     background-color: #949494;
     color: #fff;
