--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body{
     margin: 0;
     padding: 0;
     list-style-type: none;
-    width: 100px;
+    width: 110px;
 }
 .navbar a {
     background-color: #949494;
@@ -80,8 +80,8 @@ body{
     font-weight: bold;
     border-left: 5px solid #33ADFF;
     display: block;
+    font-size: 23px;
 }
-
 .navbar li {
     border-left: 10px solid #666;
     border-bottom: 2px solid #666;
