--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body{
     margin: 0;
     padding: 0;
     list-style-type: none;
-    width: 110px;
+    width: 100%;
 }
 .navbar a {
     background-color: #949494;
@@ -83,8 +83,8 @@ body{
     font-size: 23px;
 }
 .navbar li {
-    border-left: 10px solid #666;
-    border-bottom: 2px solid #666;
+    border-left: 0px solid #666;
+    border-bottom: 0px solid #666;
 }
 .gron{
     position: absolute;
