--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body{
     margin: 0;
     padding: 0;
     list-style-type: none;
-    width: 100%;
+    width: 100000;
 }
 .navbar a {
     background-color: #949494;
