--- a/style.css
+++ b/style.css
@@ -70,15 +70,14 @@ body{
     margin: 0;
     padding: 0;
     list-style-type: none;
-    width: 100000px;
+    width: 10000px;
 }
 .navbar a {
-    background-color: #949494;
+    background-color: #0048ff;
     color: #fff;
     padding: 5px;
     text-decoration: none;
     font-weight: bold;
-    border-left: 5px solid #33ADFF;
     display: block;
     font-size: 23px;
 }
