--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ body{
     font-size: 23px;
 }
 .navbar li {
-    border-left: 0px solid #666;
-    border-bottom: 0px solid #666;
+    margin: 0;
+    padding: 0;
 }
 .gron{
     position: absolute;
