--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body{
     padding: 5px;
     text-decoration: none;
     font-weight: bold;
-    display: block;
+    display: inline;
     font-size: 23px;
 }
 .navbar li {
