--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body{
 .navbar li {
     display: inline-block;
     margin-right: 5px;
-    width: 100%;
+    width: 10000px;
 }
 .navbar a:hover {
     background: #8AB8CC;
