--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body{
 .navbar a {
     background-color: #0048ff;
     display: block;
-    padding: 5px 15px;
+    padding: 30px;
     color: #fff;
     font-size:150%;
     text-decoration: none;
@@ -80,7 +80,7 @@ body{
 .navbar li {
     display: inline-block;
     margin-right: 5px;
-    width: 10000px;
+    width: 1000px;
 }
 .navbar a:hover {
     background: #8AB8CC;
