--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body{
 .navbar a {
     background-color: #0048ff;
     display: block;
-    padding: 5px;
+    padding: 0;
     color: #fff;
     font-size:150%;
     text-decoration: none;
