--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body{
     display: block;
     padding: 5 15;
     color: #fff;
-    font-size:150%;
+    font-size:20px;
     text-decoration: none;
 }
 .navbar li {
