--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body{
 }
 .navbar {
     text-align: center;
-    max-width: 550px;
+    width: 1349px;
     margin: 0 auto;
     background: #03658e;
 }
