--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body{
 .navbar a {
     background-color: #0048ff;
     display: block;
-    padding: 5 15;
+    padding: 5px 15px;
     color: #fff;
     font-size: 40px;
     text-decoration: none;
