--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body{
+    margin: 0;
+    padding: 0;
     background: url(https://gronbygg.github.io/Gronbygg/img/img2.jpg)no-repeat center center fixed;
     background-size: cover;
 }
