--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ body{
 }
 .navbar li {
     display: inline-block;
+    padding-left: 10px;
 }
 .navbar a:hover {
     background: #8AB8CC;
@@ -89,7 +90,7 @@ body{
 .navbar, .navbar li {
 
     margin: 0px;
-    padding: 3px;
+    padding: 0px;
 
     }
 .gron{
