--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body{
 }
 .navbar li {
     display: inline-block;
-    padding-left: 20px;
+    padding: 20px;
 }
 .navbar a:hover {
     background: #8AB8CC;
