--- a/media-queries.css
+++ b/media-queries.css
@@ -1,10 +1,8 @@
-@media only screen and (max-midth: 992px){
-.wwapper{
-  width: 850px;
-  }
-}
-@media only screen and (max-midth: 768px){
-.wwapper{
-  width: 450px;
-  }
+@media (max-width: 767px)
+.heeder{
+    display: -webkit-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    min-height: calc(100vh - 60px);
 }
