--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 body{
+    html #header {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+    }
     margin: 0;
     padding: 0;
     background: url(https://gronbygg.github.io/Gronbygg/img/img2.jpg)no-repeat center center fixed;
