--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,50%);
+    transform: translate (-50%,50%);
     background: #2f3640;
     height: 40px;
     border-radius: 40px;
@@ -110,6 +110,11 @@ body{
     font-size: 30px;
     color: #000000;
     text-decoration: none;
+}
+.info{
+    
+    
+    
 }
 <style>
     th, td {
