--- a/media-queries.css
+++ b/media-queries.css
@@ -1,11 +1,27 @@
+body {
+  padding: 0 15px;
+}
 
-@media (max-width: 991px)
-.header {
-    -webkit-box-pack: end;
-    -ms-flex-pack: end;
-    justify-content: flex-end;
-    width: 100%;
-    max-width: 100%;
-    padding-left: 22px;
-    padding-right: 0;
+@media (min-width: 575.98px){
+  body {
+    padding: 0 calc(50% - 270px);
+  }
+}
+
+@media (min-width: 767.98px){
+  body {
+    padding: 0 calc(50% - 360px);
+  }
+}
+
+@media (min-width: 991.98px) {
+  body {
+    padding: 0 calc(50% - 480px);
+  }
+}
+
+@media (min-width: 1199.98px){
+  body {
+    padding: 0 calc(50% - 590px);
+  }
 }
