--- a/media-queries.css
+++ b/media-queries.css
@@ -54,6 +54,29 @@ body {
 section{
   padding: 0 15px;
 }
+@media (min-width: 400px){
+  section {
+    padding: 0 calc(50% - 20px);
+  }
+}
+
+@media (min-width: 200px){
+  section {
+    padding: 0 calc(50% - 40px);
+  }
+}
+
+@media (min-width: 300px) {
+  section {
+    padding: 0 calc(50% - 80px);
+  }
+}
+
+@media (min-width: 400px){
+  section {
+    padding: 0 calc(50% - 160px);
+  }
+}
 
 @media (min-width: 575.98px){
   section {
