--- a/media-queries.css
+++ b/media-queries.css
@@ -25,3 +25,20 @@ section{
     padding: 0 calc(50% - 590px);
   }
 }
+
+/*
+  ... стандартные правила CSS ...
+  например, выводим карточки товаров по 4 в ряд
+*/
+@media (max-width:768px) {
+  /*
+    ... правила для планшетов ...
+    выводим карточки товаров по 2 в ряд
+  */
+}
+@media (max-width:320px) {
+  /*
+    ... правила для смартфонов ...
+    выводим карточки товаров по 1 в ряд
+  */
+}
