--- a/style.css
+++ b/style.css
@@ -104,8 +104,8 @@ body{
 
     }
 .gron{
-    position: 60% 50%;
-    top: 8%;
+    position: absolute;
+    top: 20%;
     left: 40%;
     font-size: 30px;
     color: #000000;
