--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body{
     padding: 0px;
 
     }
-.gron{
+.gron {
     position: absolute;
     top: 80%;
     left: 40%;
@@ -111,7 +111,7 @@ body{
     color: #000000;
     text-decoration: none;
 }
-.gron2{
+.gronn {
     position: absolute;
     top: 70%;
     left: 40%;
