--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body{
     color: #000000;
     text-decoration: none;
 }
-.gronn {
+.gron2 {
     position: absolute;
     top: 70%;
     left: 40%;
