--- a/style.css
+++ b/style.css
@@ -104,16 +104,16 @@ body{
 
     }
 .gron {
-    position: absolute;
-    top: 80%;
+    position: relative;
+    top: 20%;
     left: 40%;
     font-size: 30px;
     color: #000000;
     text-decoration: none;
 }
 .gron2 {
-    position: absolute;
-    top: 70%;
+    position: relative;
+    top: 25%;
     left: 40%;
     font-size: 30px;
     color: #000000;
