--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body{
     }
 .gron {
     position: relative;
-    top: 90%;
+    top: 20px;
     left: 40%;
     font-size: 30px;
     color: #000000;
@@ -113,7 +113,7 @@ body{
 }
 .gron2 {
     position: relative;
-    top: 85%;
+    top: 25px;
     left: 40%;
     font-size: 30px;
     color: #000000;
