--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ body{
     font-size: 30px;
     color: #000000;
     text-decoration: none;
+    background: #fff;
 }
 .gron2 {
     position: relative;
