--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ body{
     font-size: 30px;
     color: #000000;
     text-decoration: none;
+    background: #fff;
 }
 .info{
     background: #fff;
