--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body{
 
     }
 .gron {
-    position: fixed;
+    position: absolute;
     top: 20px;
     left: 40%;
     font-size: 30px;
@@ -113,7 +113,7 @@ body{
     background: #fff;
 }
 .gron2 {
-    position: fixed;
+    position: absolute;
     top: 25px;
     left: 40%;
     font-size: 30px;
