--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body{
     font-size: 30px;
     color: #000000;
     background: #fff;
-text-align: center
+    text-align: center;
 }
 .gron2 {
     position: relative;
@@ -119,7 +119,7 @@ text-align: center
     font-size: 30px;
     color: #000000;
     background: #fff;
-text-align: center
+    text-align: center;
 }
 .info{
     background: #fff;
