--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ body{
 .gron {
     position: relative;
     top: 20px;
-    left: 0px;
+    left: 40%;
     font-size: 30px;
     color: #000000;
     background: #fff;
