--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ body{
     top: 25px;
     left: 540px; 
     max-width: 230px;
+    font-size: 30px;
     color: #000000;
     background: #fff;
 }
