--- a/style.css
+++ b/style.css
@@ -106,8 +106,7 @@ body{
     max-width: 230px;
     font-size: 30px;
     color: #000000;
-    font: 2em Arial, sans-serif;
-    text-shadow: White 0 0 2px;
+    text-shadow: #5dc8e5 0 0 10px; /* Свечение голубого цвета */
 }
 .info{
     background: #fff;
