--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body{
     left: 540px; 
     max-width: 230px;
     font-size: 30px;
-    color: #000000;
+    color: #0083bd;
     text-shadow: #5dc8e5 0 0 10px; /* Свечение голубого цвета */
 }
 .info{
