--- a/style.css
+++ b/style.css
@@ -77,10 +77,10 @@ body{
 
 .navbar {
     text-align: center;
-    background: #2a489e;
+    background: #2b526f;
 }
 .navbar a {
-    background-color: #2a489e;
+    background-color: #2b526f;
     display: block;
     padding: 10px;
     color: #fff;
