--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     -webkit-box-flex: 1;
     -ms-flex: 1 0 auto;
     flex: 1 0 auto;
+     background: #2b526f
     }
 .search-box {
     position: absolute;
